# ibkr-hotkey-trader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  TODO.md  download_qcustomplot.sh  download_tws_api.sh
chrome-extension/: .gitignore  README.md  background.js  content.js  debug-popup.html  debug-settings.js  injected.js  manifest.json  popup.css  popup.html  popup.js
doc/: IMPLEMENTATION.md  REQUIREMENTS.md  TODO.md
resources/: icon.icns  icon.rc.in  tray-icon.icns
scripts/: test_positions.py
src/: bid_stub.cpp  chartwidget.cpp  chartwidget.h  ibkrclient.cpp  ibkrclient.h  ibkrwrapper.cpp  ibkrwrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  order.h  orderhistorywidget.cpp  orderhistorywidget.h  settings.cpp  settingsdialog.cpp  settingsdialog.h  symbolsearchdialog.cpp  tickerlistwidget.cpp  toastnotification.cpp  toastnotification.h  tradingmanager.cpp  tradingmanager.h
src/client/: displaygroupmanager.cpp  displaygroupmanager.h  ibkrclient.cpp  ibkrclient.h  ibkrwrapper.cpp  ibkrwrapper.h
src/dialogs/: debuglogdialog.cpp  debuglogdialog.h  settingsdialog.cpp  settingsdialog.h  symbolsearchdialog.cpp  symbolsearchdialog.h
src/models/: order.h  settings.cpp  settings.h  symbolsearchmanager.cpp  symbolsearchmanager.h  tickerdatamanager.cpp  tickerdatamanager.h  uistate.cpp  uistate.h
src/server/: remotecontrolserver.cpp  remotecontrolserver.h
src/trading/: tradingmanager.cpp  tradingmanager.h
src/ui/: mainwindow.cpp  mainwindow.h  toastnotification.cpp  toastnotification.h
src/utils/: globalhotkeymanager.cpp  globalhotkeymanager.h  logger.cpp  logger.h  systemtraymanager.h  systemtraymanager.mm
src/widgets/: chartwidget.cpp  chartwidget.h  orderhistorywidget.cpp  orderhistorywidget.h  orderpanel.cpp  orderpanel.h  tickeritemdelegate.cpp  tickeritemdelegate.h  tickerlistwidget.cpp  tickerlistwidget.h
